examples/test/testpolicy2658.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2658
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key29: value46
      key33: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value22
          key14: value27
          key27: value41
      podSelector:
        matchLabels:
          key48: value30
          key32: value3
          key0: value48
